feat: funcionalidad mover y soltar tareas

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!--
 Ejercicio: Extiende la aplicación de lista de tareas agregando:
 OK sistema de categorías/etiquetas, 
- búsqueda en tiempo real, 
+OK búsqueda en tiempo real, 
  funcionalidad de arrastrar y soltar para reordenar tareas,
 OK -> modo oscuro/claro, 
  y persistencia en diferentes formatos (JSON, CSV). 
- Usa event delegation para todos los eventos y optimiza el rendimiento evitando manipulaciones innecesarias del
+ Usa event delegation para todos los eventos y optimiza el rendimiento evitando manipulaciones innecesarias del DOM
  -->
 
  <!DOCTYPE html>
