feat: funcionalidad event delegation

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!--
 Ejercicio: Extiende la aplicación de lista de tareas agregando:
-OK sistema de categorías/etiquetas, 
-OK búsqueda en tiempo real, 
-ok funcionalidad de arrastrar y soltar para reordenar tareas,
-OK -> modo oscuro/claro, 
- y persistencia en diferentes formatos (JSON, CSV). 
- Usa event delegation para todos los eventos y optimiza el rendimiento evitando manipulaciones innecesarias del DOM
+2. OK sistema de categorías/etiquetas, 
+3. OK búsqueda en tiempo real, 
+4. ok funcionalidad de arrastrar y soltar para reordenar tareas,
+1. OK -> modo oscuro/claro, 
+5. OK y persistencia en diferentes formatos (JSON, CSV). 
+6. Usa event delegation para todos los eventos y optimiza el rendimiento evitando manipulaciones innecesarias del DOM
  -->
 
  <!DOCTYPE html>
