fix: mejora las rutas relativas

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Ejercicio: Extiende la aplicación de lista de tareas agregando:
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="styles.css">
   <title>Lista de Tareas Interactiva</title>
 
 </head>
@@ -78,6 +78,6 @@ Ejercicio: Extiende la aplicación de lista de tareas agregando:
 
   
 
-  <script src="/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
